did part of assignment 2

--- a/notebooks/Regex_codesamples.ipynb
+++ b/notebooks/Regex_codesamples.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print' (<ipython-input-4-6ce93c063507>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-6ce93c063507>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print line\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
+    "# line.rstrip() to strip characters at the end\n",
     "\n",
     "hand = open('mbox-short.txt')\n",
     "for line in hand:\n",
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -59,6 +69,84 @@
     "x = 'My 2 favorite numbers are 19 and 42'\n",
     "y = re.findall('[AEIOU]+', x)\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rd@uct.ac.za S']\n",
+      "['@uct.ac.za']\n",
+      "['From stephen.marquard@uct.ac.za Sat Jan  5 09:14:']\n",
+      "['uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "line = 'From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008'\n",
+    "\n",
+    "x = re.findall('..@\\S+..', line)\n",
+    "print(x)\n",
+    "\n",
+    "y = re.findall('@\\S+', line)\n",
+    "print(y)\n",
+    "\n",
+    "z = re.findall('F.+:', line)\n",
+    "print(z)\n",
+    "\n",
+    "r = re.findall('@(\\S+)', line)\n",
+    "print(r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['From: Using the :']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'From: Using the : character'\n",
+    "y = re.findall('^F.+:', x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stephen.marquard@uct.ac.za']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "line = 'From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008'\n",
+    "x = re.findall('\\S+?@\\S+', line)\n",
+    "print(x)"
    ]
   },
   {
