--- a/notebooks/Regex_codesamples.ipynb
+++ b/notebooks/Regex_codesamples.ipynb
@@ -150,6 +150,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Python Regular Expression Quick Guide\n",
+    "\n",
+    "^        Matches the beginning of a line\n",
+    "\n",
+    "$        Matches the end of the line\n",
+    "\n",
+    ".        Matches any character\n",
+    "\n",
+    "\\s       Matches whitespace\n",
+    "\n",
+    "\\S       Matches any non-whitespace character\n",
+    "\n",
+    "*        Repeats a character zero or more times\n",
+    "\n",
+    "*?       Repeats a character zero or more times(non-greedy)\n",
+    "\n",
+    "+        Repeats a character one or more times\n",
+    "\n",
+    "+?       Repeats a character one or more times(non-greedy)\n",
+    "\n",
+    "[aeiou]  Matches a single character in the listed set\n",
+    "\n",
+    "[^XYZ]   Matches a single character not in the listed set\n",
+    "\n",
+    "[a-z0-9] The set of characters can include a range\n",
+    "\n",
+    "(        Indicates where string extraction is to start\n",
+    "\n",
+    ")        Indicates where string extraction is to end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trying to solve the assignment with the sample data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "445822"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using the sample data to verify the code\n",
+    "\n",
+    "import urllib.request\n",
+    "import re\n",
+    "\n",
+    "sample_url = 'http://python-data.dr-chuck.net/regex_sum_42.txt'\n",
+    "\n",
+    "with urllib.request.urlopen(sample_url) as response:\n",
+    "   html = response.read()\n",
+    "\n",
+    "html_string = str(html)\n",
+    "numbers = re.findall('[0-9]+', html_string)\n",
+    "\n",
+    "intlist = [int(x) for x in numbers]\n",
+    "\n",
+    "len(intlist)\n",
+    "sum(intlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "413003"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using the actual data to calculate the answer\n",
+    "\n",
+    "import urllib.request\n",
+    "import re\n",
+    "\n",
+    "actual_url = 'http://python-data.dr-chuck.net/regex_sum_371509.txt'\n",
+    "\n",
+    "with urllib.request.urlopen(actual_url) as response:\n",
+    "   html = response.read()\n",
+    "\n",
+    "html_string = str(html)\n",
+    "numbers = re.findall('[0-9]+', html_string)\n",
+    "\n",
+    "intlist = [int(x) for x in numbers]\n",
+    "\n",
+    "#len(intlist)\n",
+    "sum(intlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
