refined the assignment2

--- a/notebooks/Regex_codesamples.ipynb
+++ b/notebooks/Regex_codesamples.ipynb
@@ -252,6 +252,51 @@
    "source": [
     "# using the actual data to calculate the answer\n",
     "\n",
+    "# import libraries\n",
+    "import urllib.request\n",
+    "import re\n",
+    "\n",
+    "# name the URL\n",
+    "actual_url = 'http://python-data.dr-chuck.net/regex_sum_371509.txt'\n",
+    "\n",
+    "# use the most basic of reading methods shown at the urllib.request project page\n",
+    "with urllib.request.urlopen(actual_url) as response:\n",
+    "   html = response.read()\n",
+    "\n",
+    "# make the output into a string so that regex can be used\n",
+    "html_string = str(html)\n",
+    "\n",
+    "# find all numbers with regex and put them into a list\n",
+    "numbers = re.findall('[0-9]+', html_string)\n",
+    "\n",
+    "# transform the list entries to integers, one by one\n",
+    "intlist = [int(x) for x in numbers]\n",
+    "\n",
+    "# calculate the sum of the integers in the list\n",
+    "#len(intlist)\n",
+    "sum(intlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "413003"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# making a one-liner for fun\n",
     "import urllib.request\n",
     "import re\n",
     "\n",
@@ -260,23 +305,9 @@
     "with urllib.request.urlopen(actual_url) as response:\n",
     "   html = response.read()\n",
     "\n",
-    "html_string = str(html)\n",
-    "numbers = re.findall('[0-9]+', html_string)\n",
-    "\n",
-    "intlist = [int(x) for x in numbers]\n",
-    "\n",
-    "#len(intlist)\n",
-    "sum(intlist)"
+    "# here comes the line\n",
+    "sum([int(x) for x in re.findall('[0-9]+', str(html))])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
