added code using urllib for python3

--- a/notebooks/networked_programs.ipynb
+++ b/notebooks/networked_programs.ipynb
@@ -29,12 +29,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now let's write a brower"
+    "## Now let's write a brower \n",
+    "**(the request response cycle)**\n",
+    "\n",
+    "1. Make a connection (a socket)\n",
+    "2. Send a request\n",
+    "3. Receive a response\n",
+    "4. Display that response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'HTTP/1.1 200 OK\\r\\nContent-Type: text/plain\\r\\nContent-Length: 167\\r\\nConnection: close\\r\\nDate: Mon, 08 May 2017 20:26:55 GMT\\r\\nServer: Apache\\r\\nLast-Modified: Fri, 04 Dec 2015 19:05:04 GMT\\r\\nETag: \"a7-526172f5b5d89\"\\r\\nAccept-Ranges: bytes\\r\\nCache-Control: max-age=604800, public\\r\\nAccess-Control-Allow-Origin: *\\r\\nAccess-Control-Allow-Headers: origin, x-requested-with, content-type\\r\\nAccess-Control-Allow-Methods: GET\\r\\n\\r\\nBut soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and'\n",
+      "b'HTTP/1.1 200 OK\\r\\nContent-Type: text/plain\\r\\nContent-Length: 167\\r\\nConnection: close\\r\\nDate: Tue, 09 May 2017 06:57:30 GMT\\r\\nServer: Apache\\r\\nLast-Modified: Fri, 04 Dec 2015 19:05:04 GMT\\r\\nETag: \"a7-526172f5b5d89\"\\r\\nAccept-Ranges: bytes\\r\\nCache-Control: max-age=604800, public\\r\\nAccess-Control-Allow-Origin: *\\r\\nAccess-Control-Allow-Headers: origin, x-requested-with, content-type\\r\\nAccess-Control-Allow-Methods: GET\\r\\n\\r\\nBut soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and'\n",
       "b' kill the envious moon\\nWho is already sick and pale with grief\\n'\n"
      ]
     }
@@ -67,18 +73,39 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Now make the same thing easier with another library\n",
+    "urllib - knows about the GET, the headers, the blank lines, port 80 and all the rest\n",
+    "This is similar to the code in the course but for Python 3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'But soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and kill the envious moon\\nWho is already sick and pale with grief\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "\n",
+    "fhand = urllib.request.urlopen('http://www.py4inf.com/code/romeo.txt')\n",
+    "\n",
+    "# the response needs to be translated to html using read()\n",
+    "fhand_html = fhand.read()\n",
+    "\n",
+    "print(fhand_html)"
+   ]
   },
   {
    "cell_type": "code",
