--- a/notebooks/networked_programs.ipynb
+++ b/notebooks/networked_programs.ipynb
@@ -109,12 +109,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'But soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and kill the envious moon\\nWho is already sick and pale with grief\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a nicer version of the code...\n",
+    "\n",
+    "import urllib.request\n",
+    "\n",
+    "with urllib.request.urlopen('http://www.py4inf.com/code/romeo.txt') as fhand:\n",
+    "    fhand_html = fhand.read()\n",
+    "    \n",
+    "print(fhand_html)"
+   ]
   },
   {
    "cell_type": "code",
