investigated read functions

--- a/notebooks/networked_programs.ipynb
+++ b/notebooks/networked_programs.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'But soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and kill the envious moon\\nWho is already sick and pale with grief\\n'\n"
+      "fhand_html\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -127,10 +127,16 @@
     "\n",
     "import urllib.request\n",
     "\n",
-    "with urllib.request.urlopen('http://www.py4inf.com/code/romeo.txt') as fhand:\n",
-    "    fhand_html = fhand.read()\n",
+    "with urllib.request.urlopen('http://www.py4inf.com/code/romeo.txt') as response:\n",
+    "    fhand_html = response.read()\n",
+    "    #fhand_html = response.readline()\n",
+    "    #fhand_html = response.readlines()\n",
     "    \n",
-    "print(fhand_html)"
+    "print(fhand_html)\n",
+    "    \n",
+    "# read() - will store the response as a string\n",
+    "# readline() - will store only the first line as a string\n",
+    "# readlines() - will store the response as a list"
    ]
   },
   {
