added resource on beutifulsoup

--- a/notebooks/networked_programs.ipynb
+++ b/notebooks/networked_programs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -49,8 +49,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'HTTP/1.1 200 OK\\r\\nContent-Type: text/plain\\r\\nContent-Length: 167\\r\\nConnection: close\\r\\nDate: Tue, 09 May 2017 06:57:30 GMT\\r\\nServer: Apache\\r\\nLast-Modified: Fri, 04 Dec 2015 19:05:04 GMT\\r\\nETag: \"a7-526172f5b5d89\"\\r\\nAccept-Ranges: bytes\\r\\nCache-Control: max-age=604800, public\\r\\nAccess-Control-Allow-Origin: *\\r\\nAccess-Control-Allow-Headers: origin, x-requested-with, content-type\\r\\nAccess-Control-Allow-Methods: GET\\r\\n\\r\\nBut soft what light through yonder window breaks\\nIt is the east and Juliet is the sun\\nArise fair sun and'\n",
-      "b' kill the envious moon\\nWho is already sick and pale with grief\\n'\n"
+      "b'HTTP/1.1 404 Not Found\\r\\nServer: nginx\\r\\nDate: Thu, 11 May 2017 19:18:52 GMT\\r\\nContent-Type: text/html\\r\\nContent-Length: 162\\r\\nConnection: close\\r\\n\\r\\n<html>\\r\\n<head><title>404 Not Found</title></head>\\r\\n<body bgcolor=\"white\">\\r\\n<center><h1>404 Not Found</h1></center>\\r\\n<hr><center>nginx</center>\\r\\n</body>\\r\\n</html>\\r\\n'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import socket\n",
+    "\n",
+    "mysock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "mysock.connect(('www.py4inf.com', 80))\n",
+    "mysock.send(b'GET http://www.py4inf.com/code/romeo.txt HTTP/1.0\\n\\n')\n",
+    "\n",
+    "while True:\n",
+    "    data = mysock.recv(512)\n",
+    "    if ( len(data) < 1 ) :\n",
+    "        break\n",
+    "    print(data);\n",
+    "\n",
+    "mysock.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'HTTP/1.1 404 Not Found\\r\\nServer: nginx\\r\\nDate: Thu, 11 May 2017 18:36:42 GMT\\r\\nContent-Type: text/html\\r\\nContent-Length: 162\\r\\nConnection: close\\r\\n\\r\\n<html>\\r\\n<head><title>404 Not Found</title></head>\\r\\n<body bgcolor=\"white\">\\r\\n<center><h1>404 Not Found</h1></center>\\r\\n<hr><center>nginx</center>\\r\\n</body>\\r\\n</html>\\r\\n'\n"
      ]
     }
    ],
@@ -109,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -140,31 +170,110 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doing the assignment:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESPONSE: <http.client.HTTPResponse object at 0x7f56a36f4978>\n",
+      "URL     : http://data.pr4e.org/intro-short.txt\n",
+      "DATE    : Thu, 11 May 2017 19:24:25 GMT\n",
+      "HEADERS :\n",
+      "---------\n",
+      "Content-Type: text/plain\n",
+      "Content-Length: 467\n",
+      "Connection: close\n",
+      "Date: Thu, 11 May 2017 19:24:25 GMT\n",
+      "Server: Apache\n",
+      "Last-Modified: Sat, 24 Sep 2016 20:36:08 GMT\n",
+      "ETag: \"1d3-53d46d841582a\"\n",
+      "Accept-Ranges: bytes\n",
+      "\n",
+      "\n",
+      "LENGTH  : 467\n",
+      "DATA    :\n",
+      "---------\n",
+      "Why should you learn to write programs?\n",
+      "\n",
+      "Writing programs (or programming) is a very creative \n",
+      "and rewarding activity.  You can write programs for \n",
+      "many reasons, ranging from making your living to solving\n",
+      "a difficult data analysis problem to having fun to helping\n",
+      "someone else solve a problem.  This book assumes that \n",
+      "everyone needs to know how to program, and that once \n",
+      "you know how to program you will figure out what you want \n",
+      "to do with your newfound skills.  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://pymotw.com/3/urllib.request/\n",
+    "\n",
+    "from urllib import request\n",
+    "URL = 'http://data.pr4e.org/intro-short.txt'\n",
+    "\n",
+    "response = request.urlopen(URL)\n",
+    "print('RESPONSE:', response)\n",
+    "print('URL     :', response.geturl())\n",
+    "\n",
+    "headers = response.info()\n",
+    "print('DATE    :', headers['date'])\n",
+    "print('HEADERS :')\n",
+    "print('---------')\n",
+    "print(headers)\n",
+    "\n",
+    "data = response.read().decode('utf-8')\n",
+    "print('LENGTH  :', len(data))\n",
+    "print('DATA    :')\n",
+    "print('---------')\n",
+    "print(data)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bingo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# getting the response code, with error handling\n",
+    "\n",
+    "import urllib.request\n",
+    "URL = 'http://data.pr4e.org/intro-short.txt'\n",
+    "\n",
+    "try:\n",
+    "    response = urllib.request.urlopen(URL)\n",
+    "    if response.getcode() == 200:\n",
+    "        print('Bingo')\n",
+    "    else:\n",
+    "        print('The response code was not 200, but: {}'.format(\n",
+    "            response.get_code()))\n",
+    "except urllib.error.HTTPError as e:\n",
+    "    print('''An error occurred: {}\n",
+    "The response code was {}'''.format(e, e.getcode()))"
+   ]
   },
   {
    "cell_type": "code",
