--- a/notebooks/programs_that_surf.ipynb
+++ b/notebooks/programs_that_surf.ipynb
@@ -41,11 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter - http://www.dr-chuck.com/page1.htm\n",
+      "http://www.dr-chuck.com/page2.htm\n"
+     ]
+    }
+   ],
    "source": [
     "# rewritten the code for Python 3... if fetches anchor tags\n",
     "\n",
@@ -68,31 +77,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Doing the first assignment"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2482\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'http://python-data.dr-chuck.net/comments_371514.html'\n",
+    "\n",
+    "html = urllib.request.urlopen(url).read()\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "\n",
+    "# Retrieve a list of anchor tags\n",
+    "# Each tag is like a dictionary of HTML attributes\n",
+    "\n",
+    "tags = soup('span')\n",
+    "#print(tags)\n",
+    "\n",
+    "sum_of_tags = 0\n",
+    "\n",
+    "for tag in tags:\n",
+    "    sum_of_tags += int(tag.contents[0])\n",
+    "    \n",
+    "print(sum_of_tags)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example code to retrieve information\n",
+    "\n",
+    "# Retrieve all of the anchor tags\n",
+    "tags = soup('a')\n",
+    "for tag in tags:\n",
+    "    # Look at the parts of a tag\n",
+    "    print('TAG:',tag)\n",
+    "    print('URL:',tag.get('href', None))\n",
+    "    print('Contents:',tag.contents[0])\n",
+    "    print('Attrs:',tag.attrs)"
+   ]
   },
   {
    "cell_type": "code",
