added code examples

--- a/notebooks/programs_that_surf.ipynb
+++ b/notebooks/programs_that_surf.ipynb
@@ -123,11 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Example code to retrieve information\n",
     "\n",
@@ -138,7 +149,15 @@
     "    print('TAG:',tag)\n",
     "    print('URL:',tag.get('href', None))\n",
     "    print('Contents:',tag.contents[0])\n",
-    "    print('Attrs:',tag.attrs)"
+    "    print('Attrs:',tag.attrs)\n",
+    "    \n",
+    "def adding_series():\n",
+    "    summ = 0\n",
+    "    for i in range(11):\n",
+    "        summ += i\n",
+    "    return summ\n",
+    "\n",
+    "adding_series()"
    ]
   },
   {
@@ -148,7 +167,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Making a function out of the assignment"
+   ]
   },
   {
    "cell_type": "code",
