--- a/notebooks/programs_that_surf.ipynb
+++ b/notebooks/programs_that_surf.ipynb
@@ -173,6 +173,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2482"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'http://python-data.dr-chuck.net/comments_371514.html'\n",
+    "\n",
+    "def assign1(url):\n",
+    "    html = urllib.request.urlopen(url).read()\n",
+    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "    tags = soup('span')\n",
+    "    \n",
+    "    sum_of_tags = 0\n",
+    "    for tag in tags:\n",
+    "        sum_of_tags += int(tag.contents[0])\n",
+    "    return sum_of_tags\n",
+    "    \n",
+    "assign1(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Doing the second assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['http://python-data.dr-chuck.net/known_by_Fikret.html', 'http://python-data.dr-chuck.net/known_by_Montgomery.html', 'http://python-data.dr-chuck.net/known_by_Mhairade.html', 'http://python-data.dr-chuck.net/known_by_Butchi.html', 'http://python-data.dr-chuck.net/known_by_Anayah.html']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# training\n",
+    "\n",
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "seed_url = 'http://python-data.dr-chuck.net/known_by_Fikret.html'\n",
+    "urls = [seed_url]\n",
+    "\n",
+    "position = 3\n",
+    "count = 4\n",
+    "\n",
+    "pos = position - 1\n",
+    "\n",
+    "for i in range(count):\n",
+    "    html = urllib.request.urlopen(urls[-1]).read()\n",
+    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "\n",
+    "    tags = soup('a')\n",
+    "    urls.append(tags[pos].get('href', None))\n",
+    "\n",
+    "print(urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://python-data.dr-chuck.net/known_by_Shinay.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "# solution\n",
+    "\n",
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "seed_url = 'http://python-data.dr-chuck.net/known_by_Alan.html '\n",
+    "urls = [seed_url]\n",
+    "\n",
+    "position = 18\n",
+    "count = 7\n",
+    "\n",
+    "pos = position - 1\n",
+    "\n",
+    "for i in range(count):\n",
+    "    html = urllib.request.urlopen(urls[-1]).read()\n",
+    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "\n",
+    "    tags = soup('a')\n",
+    "    urls.append(tags[pos].get('href', None))\n",
+    "\n",
+    "print(urls[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
