--- a/notebooks/Web services XML and JSON.ipynb
+++ b/notebooks/Web services XML and JSON.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "# doing the same thing but using urllib\n",
+    "# doing the same thing but using urllib - which is silly since etree.parse is all that is needed\n",
     "\n",
     "import urllib.request\n",
     "import pandas as pd\n",
